solve problem with game difficult

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <title>Memmory Game</title>
     <link rel="stylesheet" href="CSS/index.css">
-    <script>
+    <!--<script>
         window.onload = function() {
             document.getElementById('difficult').onchange = function() {
                 var iframe = document.getElementsByTagName('iframe')[0].contentWindow;
@@ -13,7 +13,8 @@
             }
         };
 
-    </script>
+    </script>-->
+    <script src="Scripts/index.js"></script>
 </head>
 
 <body>
