--- a/game.html
+++ b/game.html
@@ -1,20 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <title>Match Match Game</title>
     <link rel="stylesheet" href="CSS/game.css">
     <script src="Scripts/game.js"></script>
 </head>
+
 <body>
     <main>
         <section class="game">
             <div class="container">
                 <div id="memory_board">
-                    <script>newBoard()</script>
+
+                    <script>
+                        newBoard()
+
+                    </script>
+                    <div class="timer"></div>
                 </div>
             </div>
         </section>
     </main>
 </body>
+
 </html>
