--- a/game.html
+++ b/game.html
@@ -17,16 +17,10 @@
                         <div id="minutes" class="time"></div>
                         <div class="divider">:</div>
                         <div id="seconds" class="time"></div>
-                        <div class="divider">:</div>
-                        <div id="miliseconds" class="time"></div>
+                        <div class="divider">.</div>
+                        <div id="milliseconds" class="time"></div>
                     </div>
                     <div id="card-container">
-                        <script>
-                            newBoard()
-                        </script>
-                        <script>
-                            timer()
-                        </script>
                     </div>
                 </div>
             </div>
