--- a/game.html
+++ b/game.html
@@ -12,7 +12,7 @@
     <main>
         <section class="game">
             <div class="container">
-                <div class="memory_board">
+                <div class="memory_board" style="background-image: url(Images/card_shirts.png) background-position: 585px">
                     <div class="timer">
                         <div id="minutes" class="time"></div>
                         <div class="divider">:</div>
