--- a/index.html
+++ b/index.html
@@ -28,11 +28,11 @@
                 <ul>
                     <li>
                         <form>
-                            <select id="card_back">
+                            <select id="card_shirt">
                                 <option value disabled selected hidden>Card Type</option>
-                                <option value="1"></option>
-                                <option value="2"></option>
-                                <option value="3"></option>
+                                <option value="1">First card shirt</option>
+                                <option value="2">Second card shirt</option>
+                                <option value="3">Third card shirt</option>
                             </select>
                         </form>
                     </li>
@@ -71,9 +71,9 @@
             <p>for Rolling Scopes School</p>
         </div>
         <div class="social">
-            <a href="mailto:leamhein@hotmail.com?subject=Match-Match Game"><img src="Images/mail.gif" alt="li"></a>
-            <a href="https://www.linkedin.com/in/leamhain/?locale=en_US"><img src="Images/linkedin.gif" alt="li"></a>
-            <a href="https://www.facebook.com/Leamhain"><img src="Images/facebook.gif" alt="fb"></a>
+            <a href="mailto:leamhein@hotmail.com?subject=Match-Match Game"></a>
+            <a href="https://www.linkedin.com/in/leamhain/?locale=en_US"></a>
+            <a href="https://www.facebook.com/Leamhain"></a>
         </div>
     </footer>
 </body>
