--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
     <header>
         <div class="container">
             <div class="header_logo">
-                <h1>Match Match Game</h1>
+                <a href="index.html">
+                    <h1>Match Match Game</h1>
+                </a>
             </div>
             <nav>
                 <ul>
